Ayush | Add header on functional pages

--- a/crowdsource-ui/src/views/common/headerForContributor.ejs
+++ b/crowdsource-ui/src/views/common/headerForContributor.ejs
@@ -7,6 +7,10 @@
         </a>
         <div class="version-beta">Beta</div>
     </div>
+    <div class="row ml-4 border-left d-none-mob">
+        <p class="m-0" style="padding-right:21px;padding-left:20px"><%= __(MODULE) %></p>
+        <p class="m-0" style="color:#ea913f"><%= __(PAGE_TITLE) %></p>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
