--- a/crowdsource-ui/src/views/feedback.ejs
+++ b/crowdsource-ui/src/views/feedback.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include('common/headerForContributor.ejs',{path:"./"}); %>
+<%- include('common/headerForContributor.ejs',{path:"./", MODULE:"", PAGE_TITLE:""}); %>
         <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
             <div id="feedback_form">
                 <div id="feedback_title_container" class="col-12 col-sm-8 offset-sm-2 row align-items-center mb-5">
