--- a/crowdsource-ui/src/views/not-found.ejs
+++ b/crowdsource-ui/src/views/not-found.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<%- include('common/headerForContributor.ejs',{path:"./"}); %>
+<%- include('common/headerForContributor.ejs',{path:"./",MODULE:"", PAGE_TITLE:""}); %>
         <div class="container my-5 p-5">
             <div class="row justify-content-center">
                 <div class="col-sm-10 text-center">
