--- a/crowdsource-ui/src/views/record.ejs
+++ b/crowdsource-ui/src/views/record.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../css/record.css">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
 </head>
-<body> <%- include('common/headerForContributor.ejs',{path:"./"}); %>
+<body> <%- include('common/headerForContributor.ejs',{path:"./", MODULE:"Bolo India", PAGE_TITLE:"Speak"}); %>
 <div id="loader" class="overlay__content"><span class="spinner"></span></div>
 <div id="page-content" class="d-none">
     <div id="content-wrapper" class="container-fluid d-flex flex-column">
