--- a/crowdsource-ui/src/views/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/validator-prompt-page.ejs
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<%- include('common/headerForContributor.ejs',{path:"./"}); %>
+<%- include('common/headerForContributor.ejs',{path:"./", MODULE:"Bolo India", PAGE_TITLE:"Validate"}); %>
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column">
