--- a/crowdsource-ui/src/views/dashboard.ejs
+++ b/crowdsource-ui/src/views/dashboard.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<%- include('common/headerForContributor.ejs',{path:"./"}); %>
+<%- include('common/headerForContributor.ejs',{path:"./", MODULE:"Bolo India", PAGE_TITLE:"Dashboard"}); %>
 <div class="container container-fluid supreme-container">
     <div class="row">
         <div class="col-12">
