--- a/crowdsource-ui/src/views/terms-and-conditions.ejs
+++ b/crowdsource-ui/src/views/terms-and-conditions.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include('common/headerForContributor.ejs',{path:"./"}); %>
+<%- include('common/headerForContributor.ejs',{path:"./", MODULE:"", PAGE_TITLE:""}); %>
         <div class="container-fluid">
             <div class="row justify-content-center bg-primary">
                 <div class="col-12 col-sm-10 col-md-8 px-1 py-0 text-light text-center mt-0 mt-sm-2 mt-lg-3">
