--- a/crowdsource-ui/src/views/common/modals/speaker-detail/speakerDetail.ejs
+++ b/crowdsource-ui/src/views/common/modals/speaker-detail/speakerDetail.ejs
@@ -1,3 +1,4 @@
+<link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/speakerDetail.css">
 <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content p-4 border-primary border-2">
