--- a/crowdsource-ui/src/views/modals/speakerDetail.ejs
+++ b/crowdsource-ui/src/views/modals/speakerDetail.ejs
@@ -1,6 +1,6 @@
 <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-        <div class="modal-content p-4 border-primary border-2">
+        <div class="modal-content p-4 border-primary border-2 speakerDetails">
             <div class="margin-left-auto"><button class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
             <div class="modal-header d-block border-0">
                 <h1 class="modal-title text-center">
