--- a/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
+++ b/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
@@ -9,12 +9,10 @@
         <div class="simple-keyboard d-none"></div>
     </div>
 </div>
-<div class="row no-data-found justify-content-center d-none" id="wrong-language">
-    <div class="col-12 col-md-12 col-lg-8">
-        <div class="row d-flex justify-content-center">
-            <div class="col-11 col-md-9 col-lg-9 no-data-found-text"><span>
-                                <%- __('Typing language is wrong. Please type in selected language') %>
-                            </span></div>
+<div class="row no-language-selected justify-content-center w-100 d-none" id="wrong-language">
+    <div class="col-10 col-md-6 col-lg-4">
+        <div class="row mx-0 my-2">
+                <%- __('Please type in your chosen language') %>
         </div>
     </div>
 </div>
