--- a/crowdsource-ui/src/views/modules/sunoIndia/home/home.css
+++ b/crowdsource-ui/src/views/modules/sunoIndia/home/home.css
@@ -186,9 +186,7 @@ h6,
 .w-90 {
   width: 90% !important;
 }
-.w-70 {
-  width: 70% !important;
-}
+
 [data-toggle='popover']::after {
   display: inline-block;
   margin-left: 0.255em;
@@ -393,6 +391,15 @@ body.modal-open .supreme-container {
   #speakers_hours_chart_container, #speakers_hours_chart {
     height: 220px;
  }
+ .w-70 {
+  width: 100% !important;
+}
+}
+
+@media screen and (min-width: 768px) {
+  .w-70 {
+    width: 70% !important;
+  }
 }
 
 @media screen and (max-width: 320px) {
