--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -210,7 +210,8 @@
                     </div>
                 </div>
                 <div class="px-3">
-                    <div class="row justify-content-center"><span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span></div>
+                    <div class="row justify-content-center">
+                        <span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span></div>
                 </div>
             </div>
 
