--- a/crowdsource-ui/src/views/record.ejs
+++ b/crowdsource-ui/src/views/record.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/record.css">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
 </head>
 <body> <%- include('common/headerForContributor.ejs',{path:"./", MODULE:"Bolo India", PAGE_TITLE:"Speak"}); %>
 <div id="loader" class="overlay__content"><span class="spinner"></span></div>
@@ -44,7 +45,7 @@
                     <div class="col-8 text-muted h-1r" id="get-started"> <%= __('Let\'s get started!') %> </div>
                 </div>
 
-                <div class="row justify-content-center d-none" id="recording-row">
+                <div class="row justify-content-center d-none" id="recording-row" style="min-height:130px">
                     <div class="col-md-1 col-2 my-auto">
                         <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
                             <div class="outer"></div>
@@ -56,43 +57,51 @@
                         <canvas id="visualizer"></canvas>
                     </div>
                 </div>
+                <div class="row justify-content-center" id="straight-line-row" style="min-height:130px">
+                    <div class="col-lg-7 col-8 text-center" style="height:3px;background-color:#007bff;border-radius:2px;margin-top:15px">
+                    </div>
+                </div>
                 <div class="row justify-content-center d-none count-down" id="count-down"><span class="align-middle" id="cont-down-span"> <%- __('Recording will automatically stop after <span id="counter"></span> seconds') %> </span>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center d-none" id="audio-controller" style="min-height:130px">
                     <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center mb-5">
-                        <audio class="d-none" id="player" controls tabindex="-1"></audio>
+                        <audio id="player" controls tabindex="-1"></audio>
                         <div class="text-danger mt-2 d-none" id="audio-small-error"><i class="material-icons align-middle">error</i>
                             <span class="align-middle"> <%= __('Audio recording is too small. Please Re-record') %> </span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center align-items-center mb-5" id="startRecordRow">
-                <div class="col-xl-2 col-md-2 col-sm-4 col-6 col-lg-2 pr-3">
-                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 p-3" style="border-radius:50px"> <%= __('SKIP') %> </button>
+            <div class="row justify-content-center align-items-center mb-5 mt-lg-5" id="startRecordRow">
+                <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pr-5">
+                    <button type="button" class="btn btn-outline-primary text-primary w-100 p-3" id="startRecord" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Start Recording') %> </button>
+                    <button type="button" id="stopRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Stop Recording') %> </button>
+                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Re-record') %> </button>
                 </div>
-                <div class="col-xl-2 col-md-2 col-sm-4 col-6 col-lg-2 pl-3">
-                    <button type="button" class="btn btn-primary shadow h6 w-100 p-3" id="startRecord" style="border-radius:50px"> <%= __('START RECORDING') %> </button>
-                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 p-3" style="border-radius:50px"> <%= __('STOP RECORDING') %> </button>
+                <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pl-5">
+                    <div class="outline-0" tabindex="0" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
+                        <button id="nextBtn" class="btn btn-primary w-100 p-3 point-none" disabled="disabled" style="border-radius:50px;font-size:24px"> <%= __('Submit') %> </button>
+                    </div>
                 </div>
             </div>
             <div class="row justify-content-center align-items-center">
-                <div class="col-xl-2 col-md-2 col-sm-4 col-6 col-lg-2 pr-3">
-                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 p-3" style="border-radius:50px"> <%= __('RE-RECORD') %> </button>
-                </div>
-                <div class="col-xl-2 col-md-2 col-sm-4 col-6 col-lg-2 pl-3">
-                    <div class="outline-0" tabindex="0" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
-                        <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 p-3 point-none" style="border-radius:50px"> <%= __('NEXT') %> </button>
-                    </div>
+                <div>
+                    <button type="button" tabindex="-1" id="skipBtn" class="btn text-primary mb-2 w-100 px-3 py-2" style="font-size:24px"> <%= __('Skip') %> </button>
                 </div>
             </div>
-            <div class="row mt-5">
-                <div class="col-7 col-sm-8 offset-2 offset-lg-3 col-lg-6 col-xl-4 offset-xl-4">
+            <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
+                <div class="col-12 col-sm-8 col-lg-7">
                     <div class="progress mt-1">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress_bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
+                    </div>
+                    <div class="mt-4 text-muted h-1r d-none" id="get-started">
+                        <%= __('Let\'s get started!') %>
                     </div>
                 </div>
-                <div class="col-3 col-sm-2"><span class="" id="currentSentenceLbl"></span> <span class="">/</span> <span class="" id="totalSentencesLbl"></span></div>
+                <div class="px-3">
+                    <div class="row justify-content-center">
+                        <span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span></div>
+                </div>
             </div>
         </div>
     </div>
