| Priyanshu + Sreejith + Ayush| remove instructions from sunoIndia

--- a/crowdsource-ui/src/views/record.ejs
+++ b/crowdsource-ui/src/views/record.ejs
@@ -79,9 +79,9 @@
                     <button type="button" id="reRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Re-record') %> </button>
                 </div>
                 <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pl-5">
-                    <div class="outline-0" tabindex="0" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
-                        <button id="nextBtn" class="btn btn-primary w-100 p-3 point-none" disabled="disabled" style="border-radius:50px;font-size:24px"> <%= __('Submit') %> </button>
-                    </div>
+
+                        <button id="nextBtn" class="btn btn-secondary w-100 p-3 point-none" disabled="disabled" style="border-radius:50px;font-size:24px;opacity:.3"> <%= __('Submit') %> </button>
+
                 </div>
             </div>
             <div class="row justify-content-center align-items-center">
