--- a/crowdsource-ui/src/views/thank-you.ejs
+++ b/crowdsource-ui/src/views/thank-you.ejs
@@ -77,7 +77,7 @@
             <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
             <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
             <%- include modals/badge_milestone.ejs %>
-            <div class="mt-5 text-center">
+            <div class="mt-5 text-center mt-lg-0">
                 <%= __('Share it with your friends and family') %>
             </div>
             <div class="row justify-content-center my-2">
