| Priyanshu| rearrange order of nav items in navigation bar

--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -73,7 +73,7 @@
                         <%= __('Speak') %>
                     </h1>
                     <div class="mt-3 font-weight-normal">
-                        <%= __('Contribute Your Voice') %>
+                        <%= __('Contribute your voice') %>
                     </div>
                 </div>
                 <div class="col-4 text-right px-0">
@@ -98,7 +98,7 @@
                         <%= __('Validate') %>
                     </h1>
                     <div class="mt-3 font-weight-normal">
-                        <%= __('Validate What They Say') %>
+                        <%= __('Validate what they say') %>
                     </div>
                 </div>
                 <div class="col-4 text-right px-0">
