--- a/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
@@ -72,7 +72,7 @@
     </div>
     <%- include('../common/viewAllDetailBtn.ejs',{DASHBOARD:'./dashboard.html'}); %>
 </div>
-<%- include ../common/userDetails.ejs %>
+<%- include('../common/userDetails.ejs',{path:'By proceeding ahead you agree to the <a href="../terms-and-conditions.html"> Terms and Conditions</a>'}) %>
 <%- include ../common/content-languages.ejs %>
 <%- include ../common/say-listen-language.ejs %>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
