--- a/crowdsource-ui/src/views/common/modals/userDetails/userDetails.ejs
+++ b/crowdsource-ui/src/views/common/modals/userDetails/userDetails.ejs
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label mt-2">
-                        <%- __('By proceeding ahead you agree to the <a href="./terms-and-conditions.html"> Terms and Conditions</a>') %>
+                        <%- __(path) %>
                     </label>
                 </div>
                 <div class="row justify-content-center mt-3">
