--- a/crowdsource-ui/src/views/modules/dekhoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/dashboard/dashboard.ejs
@@ -94,7 +94,7 @@
     </div>
 </div>
 <button data-toggle="modal" data-target="#content-language" class="d-none" id="toggle-content-language"></button>
-<%- include ../common/userDetails.ejs %>
+<%- include('../common/userDetails.ejs',{path:'By proceeding ahead you agree to the <a href="../terms-and-conditions.html"> Terms and Conditions</a>'}) %>
 <%- include ../common/content-languages.ejs %>
 <%- include ../common/say-listen-language.ejs %>
 <%- include('../common/footer.ejs',{path:"../"}) %>
